frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  # Стратегия развёртывания. Recreate — удалит сначала все старые поды 
  # Есть и более гибкая стратегии, например, RollingUpdate, которая будет обновлять поды порциями  
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/aspedan/dumpling-store/gofront:1.0
        #  image: gitlab.praktikum-services.ru:5050/aspedan/sausage-store/sausage-store-multistage:latest
        #  image: gitlab.praktikum-services.ru:5050/aspedan/sausage-store/sausage-frontend:latest
          ports:
            - name: frontend
              containerPort: 80
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /etc/nginx # mount nginx-conf volume to /etc/nginx
              readOnly: true
              name: nginx-conf
            - mountPath: /var/log/nginx
              name: log
      volumes:
        - name: nginx-conf
          configMap:
          name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf
            - key: virtualhost.conf
              path: virtualhost/virtualhost.conf # dig directory
        - name: log
          emptyDir: {}          
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
