ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    # Хост определяет правило направления траффика по доменному имени
  - host: "apedan.tk"
    http:
      # Для различных путей в URL можно указать различные бэкенд-сервисы
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Заранее создан сервис типа ClusterIP
            # Он выступает в качестве бэкенда нашего Ingress
            name: frontend
            port:
              # У сервиса может быть несколько портов, указываем нужный нам
              number: 80
      - path: /catalog
        pathType: Prefix
        backend:
          service:
            # Заранее создан сервис типа ClusterIP
            # Он выступает в качестве бэкенда нашего Ingress
            name: backend
            port:
              # У сервиса может быть несколько портов, указываем нужный нам
              number: 8081
